libs/wingc/src/snapshots/invalid_optionals.snap
---
source: libs/wingc/src/lib.rs
description: "../../examples/tests/invalid/optionals.w"
---
[
    Diagnostic {
        message: "Expected type \"number\", but got \"number?\" instead",
        span: Some(
            WingSpan {
                start: Point {
                    row: 5,
                    column: 2,
                },
                end: Point {
                    row: 5,
                    column: 3,
                },
                start_byte: 61,
                end_byte: 62,
                file_id: "../../examples/tests/invalid/optionals.w",
            },
        ),
        level: Error,
    },
]
